--- a/MP1/Part_1/makefile
+++ b/MP1/Part_1/makefile
@@ -1,6 +1,6 @@
 testlist: testlist.o
 	./testlist -b 128 -s 1408 -t 4
 
-testlist.o: linkedlist2.cpp linkedlist2.h main.cpp
+testlist.o: linkedlist.cpp linkedlist.h main.cpp
 	g++ -c -g linkedlist.cpp main.cpp
 
