--- a/MP1/Part_1/makefile
+++ b/MP1/Part_1/makefile
@@ -1,6 +1,22 @@
-testlist: testlist.o
-	./testlist -b 128 -s 1408 -t 4
+#---------------------------------------------------------------------------- #
+# Developer: Andrew Kirfman, Margaret Baxter                                   #
+# Project: CSCE-313 Machine Problem #1                                         #
+#                                                                              #
+# File: ./MP1/Makefile                                                         #
+# ---------------------------------------------------------------------------- #
 
-testlist.o: linkedlist.cpp linkedlist.h main.cpp
-	g++ -c -g linkedlist.cpp main.cpp
+CC=g++
+STD=-std=c++11
+CFLAGS=
 
+all: main.o linkedlist.o
+	$(CC) $(STD) -o List_1 main.o linkedlist.o
+	
+main.o: main.cpp
+	$(CC) $(STD) -c main.cpp
+	
+linkedlist.o: linkedlist.cpp linkedlist.h
+	$(CC) $(STD) -c linkedlist.cpp linkedlist.h
+	
+clean:
+	rm -rf *o List_1 *.gch
