--- a/MP4/Makefile
+++ b/MP4/Makefile
@@ -1,6 +1,6 @@
 # --------------------------------------------------------------------------- #
 # Developer: Andrew Kirfman                                                   #
-# Project: CSCE-313 Episode #3                                                #
+# Project: CSCE-313 Machine Problem #4                                                #
 #                                                                             #
 # File: ./Makefile                                                            #
 # --------------------------------------------------------------------------- #
@@ -10,14 +10,9 @@ CC=g++
 STD=-std=c++11
 CFLAGS=-O3 -Wall -g
 
-all: proctest.o main.o
-	$(CC) $(STD) $(CFLAGS) -o proctest proctest.o main.o
 
-main.o: main.cpp
-	$(CC) $(STD) $(CFLAGS) -c main.cpp
-
-proctest.o: proctest.h proctest.cpp
-	$(CC) $(STD) $(CFLAGS) -c proctest.h proctest.cpp
+all: shell.cpp
+	$(CC) $(CFLAGS) $(STD) shell.cpp -o shell
 
 clean:
-	rm -rf proctest *.o *.gch
+	rm -rf shell
